# sunrise

./: .gitignore  Cargo.toml  README.md
crates/sunrise-config/: Cargo.toml
crates/sunrise-config/src/: lib.rs
crates/sunrise-daemon/: Cargo.toml
crates/sunrise-daemon/src/: capture.rs  control.rs  encoder.rs  identity.rs  main.rs  media.rs  pairing.rs  rtsp.rs  tls.rs
crates/sunrise-protocol/: Cargo.toml
crates/sunrise-protocol/src/: lib.rs
scripts/: moonlight-smoke.ps1
