[package]
name = "sunrise-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
aes = "0.8"
axum = "0.8"
hex = "0.4"
rand = "0.9"
pem = "3"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "crypto", "pem"] }
rustls = "0.23"
sunrise-config = { path = "../sunrise-config" }
sunrise-protocol = { path = "../sunrise-protocol" }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "io-util", "time", "signal"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.17"
