[package]
name = "sunrise-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
aes = "0.8"
aes-gcm = "0.10"
axum = "0.8"
hex = "0.4"
rand = "0.9"
pem = "3"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "crypto", "pem"] }
rustls = "0.23"
sunrise-config = { path = "../sunrise-config" }
sunrise-protocol = { path = "../sunrise-protocol" }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "io-util", "time", "signal"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusty_enet = "0.4"
libopus_sys = { version = "0.4", features = ["bundled"], optional = true }
nvenc = { version = "0.1", optional = true }
windows = { version = "0.62", optional = true, features = ["Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D_Fxc", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_Media_Multimedia", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_Variant"] }
windows-capture = { version = "2.0", optional = true }
x509-parser = "0.17"

[features]
default = []
audio-windows = ["dep:libopus_sys", "dep:windows"]
capture-windows = ["dep:windows-capture"]
native-nvenc = ["capture-windows", "dep:nvenc", "dep:windows"]
